--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav {
     background-color: white;
     margin: 0px;
     text-align: right;
-border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 
 
 
@@ -56,7 +56,7 @@ a:link {
     font-size: 1.1em;
     font-weight: 200;
     line-height: 28px;
-        margin-left: 3vw;
+    margin-left: 3vw;
 
 }
 
@@ -74,6 +74,70 @@ header {
     height: 100%;
 }
 
+
+#cv img {
+    margin-left: 15vw;
+    margin-top: 10vw;
+
+}
+
+.mig {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.txt{
+    margin-left: 8vw;
+    margin-top: 10vw;
+    text-align: center;
+    margin-right: 15vw;
+}
+
+.txt h1{
+    font-size: 2em;
+    font-weight: 100;
+}
+
+.txt p{
+    font-size: 1em;
+}
+
+
+#billeder {
+    margin-top: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 10vw;
+    margin-right: 10vw;
+
+}
+
+#billeder img {
+    width: 24%;
+    align-items: center;
+
+
+
+}
+
+/*
+.boks3{
+    width: 500px;
+    height: 500px;;
+    border: 4px solid black;
+}
+
+.boks3 p{
+    text-decoration: underline;
+    font-size: 3em;
+    font-weight: 100;
+    text-align: center;
+    margin-top: 10vw;
+}
+*/
+
 /*#top{
 height: 120vh;
     width: 100%;
@@ -85,8 +149,6 @@ height: 120vh;
 }
 */
 
-
-
 /* HTML OPGAVE OPSÆTNING*/
 
 #overskrift h1 {
@@ -95,18 +157,20 @@ height: 120vh;
     margin-left: 3vw;
 }
 
-#link_website{
+#link_website {
     margin-left: 3vw;
 }
-#moodboard img{
+
+#moodboard img {
     width: 30%;
 
 }
 
-#moodboard{
-margin-left: 3vw;}
+#moodboard {
+    margin-left: 3vw;
+}
 
-#moodboard h1{
+#moodboard h1 {
     font-weight: 100;
 }
 
@@ -117,7 +181,7 @@ margin-left: 3vw;}
     margin-left: 3vw;
 }
 
-#keaapp h1{
+#keaapp h1 {
     font-weight: 100;
 }
 
@@ -126,7 +190,6 @@ margin-left: 3vw;}
     margin-left: 3vw;
 }
 
-#joe h1{
+#joe h1 {
     font-weight: 100;
 }
-
