--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ p {
 h1 {
     font-family: 'Raleway',
     sans-serif;
+    font-weight: 100;
 
 }
 
@@ -86,22 +87,42 @@ header {
     flex-wrap: wrap;
 }
 
-.txt{
+.txt {
     margin-left: 8vw;
     margin-top: 10vw;
     text-align: center;
     margin-right: 15vw;
 }
 
-.txt h1{
+.txt h1 {
     font-size: 2em;
     font-weight: 100;
 }
 
-.txt p{
+.txt p {
     font-size: 1em;
 }
 
+.button {
+    background-color: white;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 1em;
+    font-family: font-family: 'Lato', sans-serif;
+    border: 2px solid black;
+    margin: 4px 2px;
+
+    transition: 0.3s;
+
+}
+
+.button:hover {
+    border: 2px solid #e4d0d0;
+    background-color: #e4d0d0;
+}
+
+.button p {}
 
 #billeder {
     margin-top: 10vw;
@@ -111,16 +132,78 @@ header {
     align-items: center;
     margin-left: 10vw;
     margin-right: 10vw;
+    margin-bottom: 10vw;
 
 }
 
 #billeder img {
     width: 24%;
     align-items: center;
+}
 
 
+#billeder1 {
+    margin-top: 10vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-bottom: 10vw;
 
 }
+
+.boks1 {
+    width: 350px;
+    height: 350px;
+    border: 2px solid black;
+    background-color: white;
+    transition: 0.3s;
+}
+
+.boks1 p {
+    font-size: 2.5em;
+    font-weight: 0;
+    text-decoration: underline;
+}
+
+.boks1:hover{
+    border: 2px solid #e4d0d0;
+    background-color: #e4d0d0;
+}
+/*
+.container{
+    position: relative;
+    width: 50%;
+}
+
+.image{display: block;
+width: 100%;
+height: auto;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #e4d0d0;
+}
+
+.container:hover .overlay{
+    opacity: 1;
+}
+.tekst{
+    color: white;
+    position: absolute;
+}
+*/
 
 /*
 .boks3{
@@ -151,15 +234,50 @@ height: 120vh;
 
 /* HTML OPGAVE OPSÆTNING*/
 
-#overskrift h1 {
-    margin-top: 4vw;
+#overskrift {
+    margin-top: 10vw;
     font-weight: 100;
     margin-left: 3vw;
+    margin-right: 5vw;
+
+    width: 950px;
+}
+
+#overskrift h1{
+    font-size: 2em;
 }
 
 #link_website {
-    margin-left: 3vw;
+    border: 2px solid black;
+    width: 250px;
+    height: 220px;
+    text-align: center;
+    margin-top: 12vw;
+     margin-right: 1vw;
+
+
 }
+
+#link_website p{
+    margin-top: 4.2vw;
+    font-size: 1.3em;
+
+}
+
+#link_website:hover{
+    width: 250px;
+    height: 220px;
+    border: 2px solid #e4d0d0;
+    background-color: #e4d0d0;
+}
+
+#indhold{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: 13vw
+}
+
 
 #moodboard img {
     width: 30%;
@@ -167,13 +285,53 @@ height: 120vh;
 }
 
 #moodboard {
-    margin-left: 3vw;
+    margin-top: 10vw;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-bottom: 10vw;
 }
 
-#moodboard h1 {
+#mood{
+    margin-left: 5vw;
+    margin-top: 10vw;
+    margin-bottom: -8vw;
     font-weight: 100;
+    font-size: 1.3em;
 }
 
+#style_indhold{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+    margin-left: 21vw;
+    margin-bottom: 10vw;
+}
+
+#styletile{
+    border: 2px solid black;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    margin-top: 5.1vw;
+     margin-left: 2vw;
+}
+
+#styletile:hover{
+    border: 2px solid #e4d0d0;
+    width: 150px;
+    height: 50px;
+    background-color: #e4d0d0;
+}
+
+#styletile_tekst h1{
+    font-size: 2em;
+}
 /* UX OPGAVE OPSÆTNING*/
 
 #keaapp {
