--- a/style.css
+++ b/style.css
@@ -778,14 +778,14 @@ nav ul li:hover ul {
     margin-right: 10vw;
 }
 
-.main {
+.bar {
     margin: auto;
     margin-top: 2vw;
     width: 60%;
     margin-bottom: 10vw;
 }
 
-.progressBar {
+.processBar {
     position: relative;
     width: 100%;
     height: 40px;
@@ -794,7 +794,7 @@ nav ul li:hover ul {
 
 }
 
-.title {
+.titel {
     position: absolute;
     width: 50px;
     height: 40px;
@@ -808,7 +808,7 @@ nav ul li:hover ul {
 
 }
 
-.progress_value {
+.process_vaerdi {
     position: relative;
     float: right;
     padding-right: 10px;
@@ -819,7 +819,7 @@ nav ul li:hover ul {
 
 }
 
-.progress {
+.process {
     height: 40px;
     position: absolute;
 
@@ -827,14 +827,14 @@ nav ul li:hover ul {
 }
 
 .mmdColor {
-    background: pink;
+    background: #e4d0d0;
 }
 
 .mmd {
     background: #e4d0d0;
 }
 
-.main h1 {
+.bar h1 {
     font-size: 1.5em;
 }
 
